# breezybox

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  breezy_exec.c  breezy_exports.c  breezy_http.c  breezy_wrap.c  breezybox.c  idf_component.yml  status.md  vterm.c
.devcontainer/: .bash_aliases  Dockerfile  License.txt  devcontainer.json
apps/: README.md  buildall.sh  buildelf.sh  buildelf_rv32.sh
apps/gzip/: buildelf.sh  buildelf_rv32.sh  buildgunzip.sh  buildgzip.sh  gunzip.c  gunzip.elf  gzip.c  gzip.elf
apps/plasma/: buildelf.sh  buildelf_rv32.sh  plasma.c  plasma.elf
apps/termbench/: buildelf.sh  buildelf_rv32.sh  termbench.c  termbench.elf
apps/termbench/local_include/: esp_timer.h
apps/vi/: buildelf.sh  buildelf_rv32.sh  vi.c  vi.elf
apps/wget/: buildelf.sh  buildelf_rv32.sh  wget.c  wget.elf
cmd/: cat.c  cp.c  date.c  df.c  eget.c  head.c  mkdir.c  wifi.c
examples/basic/: CMakeLists.txt
examples/basic/main/: idf_component.yml  main.c
examples/p4-tanmatsu/: .gitignore  CMakeLists.txt  Readme.md  partitions.csv  sdkconfig.defaults
examples/p4-tanmatsu/components/breezy_tanmatsu_lcd/: CMakeLists.txt  rgb_gfx.c  tanmatsu_lcd.c
examples/p4-tanmatsu/components/breezy_tanmatsu_lcd/include/: rgb_display.h  rgb_gfx.h  tanmatsu_lcd.h
examples/p4-tanmatsu/main/: CMakeLists.txt  all_my_symbols.c  all_my_symbols.c.p4-template  cmd_testgfx.c  elf_extras.c  idf_component.yml  main.c  my_console_io.c  my_console_io.h  net_bringup.c  net_bringup.h  tanmatsu_keyboard.c  tanmatsu_keyboard.h
examples/parts_c3/: .gitignore  CMakeLists.txt  Readme.md  sdkconfig.defaults
examples/parts_c3/main/: CMakeLists.txt  idf_component.yml  main.c
examples/s3-waveshare/: CHANGELOG.md  CMakeLists.txt  README.md
examples/s3-waveshare/main/: CMakeLists.txt  cmd_testgfx.c  idf_component.yml  main.c  my_console_io.c  my_console_io.h
examples/ssh/: CMakeLists.txt  Readme.md  sdkconfig.defaults
examples/ssh/main/: CMakeLists.txt  all_my_symbols.c  idf_component.yml  main.c  my_console_io.c  my_console_io.h
include/: breezy_cmd.h  breezybox.h  vterm.h
src/components/breezy_bt/: CHANGELOG.md  CMakeLists.txt  README.md  bt_keyboard.c  idf_component.yml  sdkconfig.defaults
src/components/breezy_bt/include/: bt_keyboard.h
src/components/breezy_rgb_lcd/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml  rgb_display.c  rgb_gfx.c  terminus-font-license.txt
src/components/breezy_rgb_lcd/include/: rgb_display.h  rgb_gfx.h
src/components/breezy_ssh/: CHANGELOG.md  CMakeLists.txt  README.md  cmd_sshd.c  idf_component.yml  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_server.c
src/components/breezy_ssh/include/: ssh_server.h
src/components/breezy_term/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  vterm.c  vterm_vfs.c
src/components/breezy_term/include/: vterm.h
src/components/breezybox/: CHANGELOG.md  CMakeLists.txt  README.md  breezy_exec.c  breezy_vfs.c  breezybox.c  idf_component.yml
src/components/breezybox/cmd/: cat.c  du.c  eget.c  httpd.c  httpget.c  ls.c  more.c  mv.c  rm.c  tail.c  wc.c
src/components/breezybox/include/: breezy_cmd.h  breezy_exec.h  breezy_vfs.h  breezybox.h
tests/: test_invariant_vi.c
